  (the letter 'w' is not included in '[a-z]' in sv_SE.UTF-8)
  (David Allsopp, report by Anders Jackson, review by Florian Angeletti and
   Gabriel Scherer)

- #10366: Make it possible to use the OCAMLRUN variable to specify
  which runtime to use while building the compilers (Sébastien Hinderer,
  review by David Allsopp)

### Bug fixes:

- #6654, #9774, #10401: make `include` and with `constraints` handle correctly
  the ghost components of signatures. For instance, in

    include struct class c = object end end type c

   the type `c` shadows the `class c` to avoid shadowing only the ghost type
   c introduced by the class.
  (Florian Angeletti, report by Eduardo Rafael, review by Gabriel Scherer)

- #6985, #10385: remove all ghost row types from included modules
  (Florian Angeletti, review by Gabriel Scherer)

- #7453, #9828, #10416: fix #show for recursive types and modules
  (Florian Angeletti, review by Gabriel Scherer)

* #7469, #10408: Sys.time now returns processor time on Windows (previously
  returned wall-clock time)
  (David Allsopp, review by Nicolás Ojeda Bär)

* #8857, #10220: Don't clobber GetLastError() in caml_leave_blocking_section
  when the systhreads library is loaded.
  (David Allsopp, report by Anton Bachin, review by Xavier Leroy)

- #8575, #10362: Surprising interaction between polymorphic variants and
  constructor disambiguation.
  (Jacques Garrigue, report and review by Thomas Refis)

- #8917, #8929, #9889, #10219: fix printing of nested recursive definitions
  in presence of a name collision.
  (Florian Angeletti, report by Thomas Refis, review by Gabriel Scherer)

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)

- #10072, #10085: Check that sizes and offsets in stack frame descriptors
  do not overflow the 16-bit fields where they are stored.
  (Xavier Leroy, report by Github user pveber, review by Gabriel Scherer)
